--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
         font-family: sans-serif;
         color: #00234a;
-        font-size: 10px;
+        font-size: 9px;
     }
 
     h1 {
@@ -20,39 +20,45 @@
     }
 
     table, tr, td {
-        border: 1px solid aqua;
         border-collapse: collapse;
         margin: 0;
+        /* border: 1px solid aqua; */
     }
 
+    a {
+        text-decoration: none;
+        color: #fff;
+    }
 
-    
-    
   </style>    
 </head>
-<body style="margin:0; padding:0; background-color:#FFFFFF;">
+<body background-color:#FFFFFF;>
 
-    <table width="300">
+    <table width="350" height="130" background="/images/sign-bg.png">
         <tr>
             <td>
-                <table width="300">
+                <table width="340">
                     <tr>
+                        <td width="5"></td>
                         <td><h1>MOHD IZZ MOHD YACOB</h1></td>
                     </tr>
                     <tr>
+                        <td width="5"></td>
                         <td>Executive (Content Creator)</td>
                     </tr>
                     <tr>
                         <td height="5"></td>
                     </tr>
                 </table>
-                <table width="300">
-                    <tr width="100px">
-                        <td><strong>Mobile</strong></td>
-                        <td><strong>Phone</strong></td>
-                        <td><strong>Email</strong></td>
+                <table>
+                    <tr>
+                        <td width="5"></td>
+                        <td width="80px"><strong>Mobile</strong></td>
+                        <td width="80px"><strong>Phone</strong></td>
+                        <td width="175px"><strong>Email</strong></td>
                     </tr>
                     <tr>
+                        <td width="5"></td>
                         <td>+(60)14 5655966</td>
                         <td>+(60)87 415279</td>
                         <td>izz.syahmi@shipcare.com.my</td>
@@ -61,16 +67,38 @@
                         <td height="5"></td>
                     </tr>
                 </table>
-                <table width="300">
+                <table>
                     <tr>
+                        <td width="5"></td>
                         <td><strong>Address</strong></td>
                     </tr>
                     <tr>
+                        <td width="5"></td>
                         <td>International Shipcare, Unit No. 3A-1, Level 3A, Office-Lot, Labuan Times Square, Jalan Merdeka, 87000 Labuan F.T, Malaysia</td>
                     </tr>
                 </table>
-
             </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td height="7"></td>
+        </tr>
+    </table>
+
+    <table width="350" height="100" background="images/footer.png">
+
+        <tr height="35" valign="bottom">
+            <td width="250"></td>
+            <td align="right"><a href="https://web.facebook.com/internationalshipcare"><img src="images/facebook.png" alt="fb"></a></td>
+            <td align="right"><a href="https://www.linkedin.com/in/international-shipcare/"><img src="images/linkedin.png" alt="li"></a></td>
+            <td align="right"><a href="https://www.instagram.com/international_shipcare/"><img src="images/instagram.png" alt="ig"></a></td>
+            <td align="right"><a href="https://www.youtube.com/@internationalshipcare8918"></a><img src="images/youtube.png" alt="yt"></a></td>
+            <td width="5"></td>
+        </tr>
+        <tr valign="top">
+            <td align="right" colspan="5"><a href="https://www.internationalshipcare.com/">www.internationalshipcare.com</a></td>
         </tr>
     </table>
 
