update link with CDN

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body background-color:#FFFFFF;>
 
-    <table width="350" height="130" background="/images/sign-bg.png">
+    <table width="350" height="130" background="https://cdn.jsdelivr.net/gh/izz133/isc-signature/images/sign-bg.png">
         <tr>
             <td>
                 <table width="340">
@@ -87,14 +87,14 @@
         </tr>
     </table>
 
-    <table width="350" height="100" background="images/footer.png">
+    <table width="350" height="100" background="https://cdn.jsdelivr.net/gh/izz133/isc-signature/images/footer.png">
 
         <tr height="35" valign="bottom">
             <td width="250"></td>
-            <td align="right"><a href="https://web.facebook.com/internationalshipcare"><img src="images/facebook.png" alt="fb"></a></td>
-            <td align="right"><a href="https://www.linkedin.com/in/international-shipcare/"><img src="images/linkedin.png" alt="li"></a></td>
-            <td align="right"><a href="https://www.instagram.com/international_shipcare/"><img src="images/instagram.png" alt="ig"></a></td>
-            <td align="right"><a href="https://www.youtube.com/@internationalshipcare8918"></a><img src="images/youtube.png" alt="yt"></a></td>
+            <td align="right"><a href="https://web.facebook.com/internationalshipcare"><img src="https://cdn.jsdelivr.net/gh/izz133/isc-signature/images/facebook.png" alt="fb"></a></td>
+            <td align="right"><a href="https://www.linkedin.com/in/international-shipcare/"><img src="https://cdn.jsdelivr.net/gh/izz133/isc-signature/images/linkedin.png" alt="li"></a></td>
+            <td align="right"><a href="https://www.instagram.com/international_shipcare/"><img src="https://cdn.jsdelivr.net/gh/izz133/isc-signature/images/instagram.png" alt="ig"></a></td>
+            <td align="right"><a href="https://www.youtube.com/@internationalshipcare8918"></a><img src="https://cdn.jsdelivr.net/gh/izz133/isc-signature/images/youtube.png" alt="yt"></a></td>
             <td width="5"></td>
         </tr>
         <tr valign="top">
