change td width at v2

--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
         font-size: 12px;
     }
 
-    h1 {
-        font-size: 16px;
-        letter-spacing: 2px;
-    }
-
     table, tr, td {
         border-collapse: collapse;
         margin: 0;
@@ -160,12 +155,12 @@
     </table>
     <table width="420" height="100">
         <tr height="35" valign="middle">
-            <td width="290"></td>
-            <td style="font-size: 7px;">Social Media:</td>
-            <td align="right"><a href="https://web.facebook.com/internationalshipcare" target="_blank"><img src="images/fb-blue.png" alt="fb"></a></td>
-            <td align="right"><a href="https://www.linkedin.com/in/international-shipcare/" target="_blank"><img src="images/linked-blue.png" alt="li"></a></td>
-            <td align="right"><a href="https://www.instagram.com/international_shipcare/" target="_blank"><img src="images/ig-blue.png" alt="ig"></a></td>
-            <td align="right"><a href="https://www.youtube.com/@internationalshipcare8918" target="_blank"><img src="images/yt-blue.png" alt="yt"></a></td>
+            <td width="270"></td>
+            <td style="font-size: 10px; white-space: nowrap;" width="80">Social Media:</td>
+            <td align="right" width="20"><a href="https://web.facebook.com/internationalshipcare" target="_blank"><img src="images/fb-blue.png" alt="fb"></a></td>
+            <td align="right" width="20"><a href="https://www.linkedin.com/in/international-shipcare/" target="_blank"><img src="images/linked-blue.png" alt="li"></a></td>
+            <td align="right" width="20"><a href="https://www.instagram.com/international_shipcare/" target="_blank"><img src="images/ig-blue.png" alt="ig"></a></td>
+            <td align="right" width="20"><a href="https://www.youtube.com/@internationalshipcare8918" target="_blank"><img src="images/yt-blue.png" alt="yt"></a></td>
             <td width="5"></td>
         </tr>
         <tr>
