add px at every width and heigh definition

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
     <p>Version 2</p>
     <br><br>
 
-    <table width="420" height="155">
+    <table width="420px" height="155px">
         <tr>
             <td>
-                <table width="400">
+                <table width="400px">
                     <tr>
                         <td style="font-size: 20px;"><strong>MOHD IZZ MOHD YACOB</strong></td>
                     </tr>
@@ -113,7 +113,7 @@
                         <td>Executive (Content Creator)</td>
                     </tr>
                     <tr>
-                        <td height="5"></td>
+                        <td height="5px"></td>
                     </tr>
                 </table>
                 <table>
@@ -128,7 +128,7 @@
                         <td>izz.syahmi@shipcare.com.my</td>
                     </tr>
                     <tr>
-                        <td height="5"></td>
+                        <td height="5px"></td>
                     </tr>
                 </table>
                 <table>
@@ -144,17 +144,17 @@
     </table>
     <table>
         <tr>
-            <td height="7"></td>
+            <td height="7px"></td>
         </tr>
     </table>
-    <table width="420" height="100">
-        <tr height="35" valign="middle">
-            <td width="270"></td>
-            <td style="font-size: 10px; white-space: nowrap;" width="80">Social Media:</td>
-            <td align="right" width="20"><a href="https://web.facebook.com/internationalshipcare" target="_blank"><img src="images/fb-blue.png" alt="fb"></a></td>
-            <td align="right" width="20"><a href="https://www.linkedin.com/in/international-shipcare/" target="_blank"><img src="images/linked-blue.png" alt="li"></a></td>
-            <td align="right" width="20"><a href="https://www.instagram.com/international_shipcare/" target="_blank"><img src="images/ig-blue.png" alt="ig"></a></td>
-            <td align="right" width="20"><a href="https://www.youtube.com/@internationalshipcare8918" target="_blank"><img src="images/yt-blue.png" alt="yt"></a></td>
+    <table width="420px" height="100px">
+        <tr height="35px" valign="middle">
+            <td width="270px"></td>
+            <td style="font-size: 10px; white-space: nowrap;" width="80px" align="right">Social Media:</td>
+            <td align="right" width="20px"><a href="https://web.facebook.com/internationalshipcare" target="_blank"><img src="images/fb-blue.png" alt="fb"></a></td>
+            <td align="right" width="20px"><a href="https://www.linkedin.com/in/international-shipcare/" target="_blank"><img src="images/linked-blue.png" alt="li"></a></td>
+            <td align="right" width="20px"><a href="https://www.instagram.com/international_shipcare/" target="_blank"><img src="images/ig-blue.png" alt="ig"></a></td>
+            <td align="right" width="20px"><a href="https://www.youtube.com/@internationalshipcare8918" target="_blank"><img src="images/yt-blue.png" alt="yt"></a></td>
             <td width="5"></td>
         </tr>
         <tr>
