--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
         <tr>
             <td colspan="7"><a href="https://www.internationalshipcare.com" target="_blank"><img src="images/footer-v2.png"></td>
         </tr>
+        <tr>
+            <td height="10"></td>
+        </tr>
+        <tr>
+            <td colspan="7" style="font-size:10px;color:#cccccc;text-align:justify;">The content of this email is confidential and intended for the recipient specified in message only. It is strictly forbidden to share any part of this message with any third party, without a written consent of the sender. If you received this message by mistake, please reply to this message and follow with its deletion, so that we can ensure such a mistake does not occur in the future.</td>
+        </tr>
     </table>
 </body>
 
